update-sProducts-css

--- a/sproduct.html
+++ b/sproduct.html
@@ -53,7 +53,9 @@
                 </div>
             </div>
         </div>
-        <div></div> 
+        <div class="single-pro-details">
+
+        </div> 
     </section>
 
      <!-- bottom -->
