--- a/sproduct.html
+++ b/sproduct.html
@@ -54,6 +54,7 @@
                 </div>
             </div>
         </div>
+
         <div class="single-pro-details">
             <h6>Home / T-Shirt</h6>
             <h4>Men's Fashion T Shirts</h4>
@@ -216,6 +217,23 @@
         </div>
     </footer>
 
+    <script>
+        var MainImg = document.getElementById("MainImg");
+        var smallimg = document.getElementsByClassName("small-img");
+
+        smallimg[0].onclick = function(){
+           MainImg.src = smallimg[0].src; 
+        }
+        smallimg[1].onclick = function(){
+           MainImg.src = smallimg[1].src; 
+        }
+        smallimg[2].onclick = function(){
+           MainImg.src = smallimg[2].src; 
+        }
+        smallimg[3].onclick = function(){
+           MainImg.src = smallimg[3].src; 
+        }
+    </script>  
     
     
     <script src="./js/script.js"></script>
