--- a/sproduct.html
+++ b/sproduct.html
@@ -67,7 +67,7 @@
                 <option>Large</option>
             </select>
             <input type="number" value="1">
-            <button class="normal">Add To Cart</button>
+            <button class="normal" style="margin-left: 20px;">Add To Cart</button>
             <h4>Product Details</h4>
             <span>The Gildan Ultra Cotton T-shirt is made from a substantial 6.0 oz. per sq. yd. fabric constructed from 100% cotton, this classic fit preshrunk jersey knit provides unmatched comfort with each wear. Featuring a taped neck and shoulder, and a seamless double-needle coller, and available in a range of colors, it offers it all in the ultimate head-turning package.</span>
 
