--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                <li><a href="shop.html">Shop</a></li>
                <li><a href="blog.html">Blog</a></li>
                <li><a class="active" href="about.html">About</a></li>
-               <li><a href="cintact.html">Contact</a></li>
+               <li><a href="contact.html">Contact</a></li>
                <li id="lg-bag"><a href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
                <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
