--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Andrew Programming  Ecommerce Website</title>
+    <title>Cart | Ecommerce Website</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" type="image/x-icon" href="./img/about/90de2591-0246-410b-93f2-e45950d74117.jpg">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
@@ -110,6 +110,7 @@
                     <td><strong>$3</strong></td>
                 </tr>
             </table>
+            <button class="normal">Proceed to checkout</button>
         </div>
     </section>
 
