--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 
     <!-- header -->
     <section id="header">
-        <a href="#"><img src="./img/logo.png" class="logo" alt=""></a>
+        <a href="/"><img src="./img/logo.png" class="logo" alt=""></a>
 
         <div>
             <ul id="navbar">
