--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Contact | Ecommerce Website</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="icon" type="image/x-icon" href="./img/about/90de2591-0246-410b-93f2-e45950d74117.jpg">
+    <link rel="icon" type="image/x-icon" href="./img/android-chrome-512x512.png">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
 
 </head>
