--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <img src="./img/products/f1.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</T-Shirts></h5>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -99,7 +99,7 @@
                 <img src="./img/products/f2.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</T-Shirts></h5>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -133,7 +133,7 @@
                 <img src="./img/products/f4.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</T-Shirts></h5>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -150,7 +150,7 @@
                 <img src="./img/products/f5.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</T-Shirts></h5>
+                    <h5>Cartoon Astronaut T-Shirts></h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -167,7 +167,7 @@
                 <img src="./img/products/f6.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</T-Shirts></h5>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -184,7 +184,7 @@
                 <img src="./img/products/f7.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</T-Shirts></h5>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -201,7 +201,7 @@
                 <img src="./img/products/f8.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</T-Shirts></h5>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
